new trail view + json + celery

--- a/trail/templates/trail/main.html
+++ b/trail/templates/trail/main.html
@@ -41,68 +41,7 @@
                 </div>
             {% endif %}
             {% if trail.tracks|length is 1 %}
-                {% with trail.tracks|first|details as track %}
-                    <div>
-                        <ul class="trail__statistics-grid">
-                            <li class="is-center">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#calendar"></use>
-                                </svg>
-                                {{ track.start_datetime|date:"SHORT_DATE_FORMAT" }}
-                            </li>
-                            <li class="is-center">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#home"></use>
-                                </svg>
-                                {{ track.location|default:'n/a'|truncatechars:18 }}
-                            </li>
-                            <li class="is-center">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#distance"></use>
-                                </svg>
-                                {{ track.distance|default:0|floatformat:"-2" }}km
-                            </li>
-                            <li class="is-center">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#rocket"></use>
-                                </svg>
-                                {{ track.uphill|default:0|floatformat:"0" }}m
-                            </li>
-                            <li class="is-center">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#time"></use>
-                                </svg>
-                                {{ track.total_time|format_time }}
-                            </li>
-                        </ul>
-                    </div>
-                    <p><!-- empty --></p>
-                {% endwith %}
-            {% endif %}
-            {% if trail.description %}
-                {# TODO Styling as quote? #}
-                <p>{{ trail.description }}</p>
-            {% endif %}
-            <p><!-- empty --></p>
-            {% for trail_track in trail.tracks %}
-                {% with trail_track|details as track %}
-                    {% if trail.tracks|length > 1 %}
-                        {% with n=forloop.counter|stringformat:"s" %}
-                            {% with 'Trail '|add:n as default_title %}
-                                <h2>{{ track.name|default:default_title }}</h2>
-                            {% endwith %}
-                        {% endwith %}
-                    {% endif %}
-                    {# FIXME show only the track #}
-                    <trail-map class="trail-map"
-                               data-has-interface="true"
-                               data-trail="{{ trail.id }}"
-                               data-track="{{ forloop.counter0 }}">
-                        <noscript>
-                            <img class="trail-map__fallback" src="{{ trail.thumbnail.url }}">
-                        </noscript>
-                    </trail-map>
-                    <p><!-- empty --></p>
+                {% with trail.tracks|first as track %}
                     <div>
                         <ul class="trail__statistics-grid">
                             <li class="is-left">
@@ -110,44 +49,6 @@
                                     <use xlink:href="#home"></use>
                                 </svg>
                                 {{ track.location|default:'n/a'|truncatechars:18 }}
-                            </li>
-                            <li class="is-left">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#distance"></use>
-                                </svg>
-                                {{ track.distance|default:0|floatformat:"-2" }}km
-                            </li>
-                            <li class="is-left">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#rocket"></use>
-                                </svg>
-                                {{ track.uphill|default:0|floatformat:"0" }}m
-                            </li>
-                            <li class="is-left">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#time"></use>
-                                </svg>
-                                {{ track.total_time|format_time }}
-                            </li>
-                            <li class="is-left">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#speed-medium"></use>
-                                </svg>
-                                {{ track.average_speed|default:0|floatformat }}km/h
-                            </li>
-                        </ul>
-                        <ul class="trail__statistics-grid">
-                            <li class="is-left">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#calendar"></use>
-                                </svg>
-                                {{ track.start_datetime|date:"SHORT_DATETIME_FORMAT" }}
-                            </li>
-                            <li class="is-left">
-                                <svg width="20" height="20" class="trail__icon">
-                                    <use xlink:href="#calendar"></use>
-                                </svg>
-                                {{ track.end_datetime|date:"SHORT_DATETIME_FORMAT" }}
                             </li>
                             <li class="is-left">
                                 <svg width="20" height="20" class="trail__icon">
@@ -163,12 +64,74 @@
                             </li>
                             <li class="is-left">
                                 <svg width="20" height="20" class="trail__icon">
+                                    <use xlink:href="#calendar"></use>
+                                </svg>
+                                {{ track.start_datetime|parse_time|date:"SHORT_DATE_FORMAT" }}
+                            </li>
+                            <!-- weather -->
+                        </ul>
+                        <ul class="trail__statistics-grid">
+
+                            <li class="is-left">
+                                <svg width="20" height="20" class="trail__icon">
+                                    <use xlink:href="#distance"></use>
+                                </svg>
+                                {{ track.distance|default:0|floatformat:"-2" }}km
+                            </li>
+                            <li class="is-left">
+                                <svg width="20" height="20" class="trail__icon">
+                                    <use xlink:href="#rocket"></use>
+                                </svg>
+                                {{ track.uphill|default:0|floatformat:"0" }}m
+                            </li>
+                            <li class="is-left">
+                                <svg width="20" height="20" class="trail__icon">
+                                    <use xlink:href="#time"></use>
+                                </svg>
+                                {{ track.moving_time|format_time }}
+                            </li>
+                            <li class="is-left">
+                                <svg width="20" height="20" class="trail__icon">
+                                    <use xlink:href="#speed-medium"></use>
+                                </svg>
+                                {{ track.average_moving_speed|floatformat:"1" }}km/h
+                            </li>
+                            <li class="is-left">
+                                <svg width="20" height="20" class="trail__icon">
                                     <use xlink:href="#speed-fast"></use>
                                 </svg>
                                 {{ track.max_speed|floatformat:"1" }}km/h
                             </li>
                         </ul>
                     </div>
+                    <p><!-- empty --></p>
+                {% endwith %}
+            {% endif %}
+            {% if trail.description %}
+                {# TODO Styling as quote? #}
+                <p>{{ trail.description }}</p>
+            {% endif %}
+            <p><!-- empty --></p>
+            {% for trail_track in trail.tracks %}
+                {% with trail_track as track %}
+                    {% if trail.tracks|length > 1 %}
+                        {% with n=forloop.counter|stringformat:"s" %}
+                            {% with 'Trail '|add:n as default_title %}
+                                <h2>{{ track.name|default:default_title }}</h2>
+                            {% endwith %}
+                        {% endwith %}
+                    {% endif %}
+                    {# FIXME show only the track #}
+                    <trail-map class="trail-map"
+                               data-has-interface="true"
+                               data-trail="{{ trail.id }}"
+                               data-track="{{ forloop.counter0 }}">
+                        {% if trail.thumbnail %}
+                            <noscript>
+                                <img class="trail-map__fallback" src="{{ trail.thumbnail.url }}">
+                            </noscript>
+                        {% endif %}
+                    </trail-map>
                     <p><!-- empty --></p>
                 {% endwith %}
             {% endfor %}
