--- a/trail/templates/trail/tag_trail_preview.html
+++ b/trail/templates/trail/tag_trail_preview.html
@@ -9,7 +9,7 @@
         {% if trail.thumbnail %}
             <img class="trail-map" src="{{ trail.thumbnail.url }}">
         {% else %}
-            <trail-map class="trail-map" data-url="{{ trail.file.url }}"></trail-map>
+            <trail-map class="trail-map" data-trail="{{ trail.id }}" data-track="0"></trail-map>
         {% endif %}
         <h3 class="trail-preview__title">{{ trail.name|default:'Unnamed trail' }}</h3>
     </div>
