--- a/shell/static/shell/styles/base.css
+++ b/shell/static/shell/styles/base.css
@@ -53,6 +53,10 @@
     grid-template: auto auto 1fr auto / 1fr;
 }
 
+::selection {
+    background-color: var(--base02);
+}
+
 
 /* --- Support Bar --- */
 
