--- a/trail/templates/trail/main.html
+++ b/trail/templates/trail/main.html
@@ -1,8 +1,34 @@
 {% extends 'shell/base.html' %}
 {% load static i18n tpl_button filter_gpx %}
 
-{% block title %}{{ trail.name|default:'Trail' }}{% endblock %}
+{% block title %}{{ trail.name|default:'' }}{% endblock %}
 {% block description %}{{ trail.description|default:'' }}{% endblock %}
+
+{% block social %}
+    <meta property="og:title" content="{{ trail.name|default:'Trail' }}">
+    <meta property="og:description" content="{{ trail.description|default:'' }}">
+
+    <meta property="og:url" content="https://mountainbikers.club{{ request.path }}">
+    <meta property="og:site_name" content="Mountain Bikers Club">
+    <meta property="og:locale" content="{{ LANGUAGE_CODE }}">
+
+    {% if trail.thumbnail %}
+        <meta property="og:image" content="https://mountainbikers.club{{ trail.thumbnail.url }}">
+        <meta property="og:image:width" content="425">
+        <meta property="og:image:height" content="225">
+    {% endif %}
+
+    {% if trail.tracks %}
+        {% with trail.tracks|first as track %}
+            <meta property="fitness:distance:value" content="{{ track.distance|default:0|floatformat:"-2" }}">
+            <meta property="fitness:distance:units" content="km">
+            <meta property="fitness:duration:value" content="{{ track.moving_time|default:0|floatformat:"0" }}">
+            <meta property="fitness:distance:units" content="s">
+            <meta property="fitness:speed:value" content="{{ track.average_moving_speed|default:0|floatformat:"-2" }}">
+            <meta property="fitness:speed:units" content=km/"s">
+        {% endwith %}
+    {% endif %}
+{% endblock %}
 
 {% block content %}
     <div class="o-section">
