--- a/shell/static/shell/styles/base.css
+++ b/shell/static/shell/styles/base.css
@@ -50,7 +50,7 @@
 
 .o-view {
     display: grid;
-    grid-template: auto auto 1fr auto / 1fr;
+    grid-template: auto 1fr auto auto / 1fr;
 }
 
 ::selection {
@@ -249,6 +249,11 @@
     min-width: 260px;
     resize: vertical;
     font-family: inherit;
+}
+
+.django__form__list input[type="checkbox"] {
+    width: unset;
+    min-width: unset;
 }
 
 .django__form__list input:-moz-ui-invalid {
