--- a/shell/static/shell/styles/trail.css
+++ b/shell/static/shell/styles/trail.css
@@ -143,11 +143,7 @@
 
 /* --- Trail Charts --- */
 
-.trail-charts {
-    display: block;
-    width: 100%;
-    height: 480px;
-    background: var(--base06);
+.trail-map__chart .bk-canvas {
     border-radius: 3px;
     overflow: hidden;
 }
