--- a/shell/templates/shell/base.html
+++ b/shell/templates/shell/base.html
@@ -13,20 +13,20 @@
     <meta name="application-name" content="MTB Club">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#ffffff">
-    {# <link rel="icon" sizes="192x192" href="{% static "hello/assets/icons/touch-icon.png" %}">#}
+    {# <link rel="icon" sizes="192x192" href="{% static "shell/assets/icons/touch-icon.png" %}"> #}
 
     <!-- iOS: 152x152px (180x180px) -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="MTB Club">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="format-detection" content="telephone=no">
-    {# <link rel="apple-touch-icon" href="{% static "hello/assets/icons/apple-touch-icon.png" %}">#}
+    {# <link rel="apple-touch-icon" href="{% static "shell/assets/icons/apple-touch-icon.png" %}"> #}
 
     <!-- Safari pinned tab: 80x80px -->
-    {# <link rel="mask-icon" href="{% static "hello/assets/icons/website-icon.svg" %}" color="#393939">#}
+    {# <link rel="mask-icon" href="{% static "shell/assets/icons/website-icon.svg" %}" color="#393939"> #}
 
     <!-- Windows: 144x144px -->
-    {# <meta name="msapplication-TileImage" content="{% static "hello/assets/icons/ms-touch-icon.png" %}">#}
+    {# <meta name="msapplication-TileImage" content="{% static "shell/assets/icons/ms-touch-icon.png" %}"> #}
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-tap-highlight" content="no">
 
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="{% static 'shell/styles/trail.css' %}">
 
     <!-- Web App -->
-    {# <link rel="manifest" href="{% static "hello/webapp.manifest" %}">#}
+    {# <link rel="manifest" href="{% static "shell/webapp.manifest" %}"> #}
     <script async type="module" src="{% static "shell/scripts/main.js" %}"></script>
 
     {% block social %}{% endblock %}
