add role to button

--- a/shell/templates/shell/tag_button.html
+++ b/shell/templates/shell/tag_button.html
@@ -1,4 +1,4 @@
-<lit-button class="button__outer {{ class|default:'' }}">
+<lit-button class="button__outer {{ class|default:'' }}" role="button">
     {% if link %}
         <a class="button" href="{{ link }}">
             <span>{{ label }}</span>
