--- a/discover/templates/discover/discover.html
+++ b/discover/templates/discover/discover.html
@@ -1,5 +1,5 @@
 {% extends 'shell/base.html' %}
-{% load static i18n tpl_button tpl_trail_preview %}
+{% load static i18n tpl_trail_preview %}
 
 {% block title %}{% trans 'Discover' %}{% endblock %}
 {% block description %}{% trans 'Discover new trails' %}{% endblock %}
